--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.5.3",
-    "html2canvas": "^1.0.0-rc.7",
     "jquery": "^3.5.1",
-    "jspdf": "^2.3.0",
+    "pdfmake": "^0.1.71",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
