--- a/package.json
+++ b/package.json
@@ -7,16 +7,21 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
+    "@react-pdf/renderer": "^3.4.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "jspdf": "^2.5.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
+    "react-chrono": "^2.6.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "react-to-pdf": "^1.0.1",
     "sort-by": "^0.0.2",
     "web-vitals": "^2.1.0"
   },
